Base SPK insert DB

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,6 +37,7 @@
         <activity android:name=".InputPengguna" android:screenOrientation="portrait"></activity>
         <activity android:name=".MasterProduk" android:screenOrientation="portrait"></activity>
         <activity android:name=".InputPesanan" android:screenOrientation="portrait"></activity>
+        <activity android:name=".SuratPerintahKerja" android:screenOrientation="portrait"></activity>
     </application>
     <uses-permission android:name="android.permission.INTERNET"/>
 </manifest>
