--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -50,6 +50,8 @@
         <activity android:name=".SuratPerintahKerja" android:screenOrientation="portrait"></activity>
         <activity android:name=".DetailInfoPenyelesaian" android:screenOrientation="portrait"></activity>
         <activity android:name=".DetailProduk" android:screenOrientation="portrait"></activity>
+        <activity android:name=".PembeliaanBahan" android:screenOrientation="portrait"></activity>
+        <activity android:name=".DetailPembelianBahan" android:screenOrientation="portrait"></activity>
     </application>
     <uses-permission android:name="android.permission.INTERNET"/>
 </manifest>
