Info bahan + penggunaan Bahan

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -53,6 +53,9 @@
         <activity android:name=".PembeliaanBahan" android:screenOrientation="portrait"></activity>
         <activity android:name=".DetailPembelianBahan" android:screenOrientation="portrait"></activity>
         <activity android:name=".HasilProduksi" android:screenOrientation="portrait"></activity>
+        <activity android:name=".InfoKetersediaanBahan" android:screenOrientation="portrait"></activity>
+        <activity android:name=".PenggunaanBahanBaku" android:screenOrientation="portrait"></activity>
+        <activity android:name=".DetailPenggunaanBahanBaku" android:screenOrientation="portrait"></activity>
     </application>
     <uses-permission android:name="android.permission.INTERNET"/>
 </manifest>
