--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,5 +37,8 @@ dependencies {
     compile 'com.android.support:appcompat-v7:23.4.0'
     compile 'com.android.support:design:23.4.0'
     compile group: 'org.apache.httpcomponents' , name: 'httpclient-android' , version: '4.3.5.1'
+    compile('org.apache.httpcomponents:httpmime:4.3') {
+        exclude module: "httpclient"
+    }
     compile group: 'cz.msebera.android' , name: 'httpclient', version: '4.4.1.1'
 }
