--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,12 +4,12 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/aw"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".Login"
+            android:name="ajk.riset.ajk_riset.slider.Login"
             android:label="@string/app_name"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar">
@@ -20,7 +20,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".MainActivity"
+            android:name="ajk.riset.ajk_riset.slider.MainActivity"
             android:label="@string/app_name"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar">
@@ -30,7 +30,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".MainActivityPengerajin"
+            android:name="ajk.riset.ajk_riset.slider.MainActivityPengerajin"
             android:label="@string/app_name"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar">
@@ -40,24 +40,25 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".InfoPemesananProduk" android:screenOrientation="portrait"></activity>
-        <activity android:name=".DetailPesananProduk" android:screenOrientation="portrait"></activity>
-        <activity android:name=".InfoDataPenyelesaian" android:screenOrientation="portrait"></activity>
-        <activity android:name=".MasterPengguna" android:screenOrientation="portrait"></activity>
-        <activity android:name=".InputPengguna" android:screenOrientation="portrait"></activity>
-        <activity android:name=".MasterProduk" android:screenOrientation="portrait"></activity>
-        <activity android:name=".InputPesanan" android:screenOrientation="portrait"></activity>
-        <activity android:name=".SuratPerintahKerja" android:screenOrientation="portrait"></activity>
-        <activity android:name=".DetailInfoPenyelesaian" android:screenOrientation="portrait"></activity>
-        <activity android:name=".DetailProduk" android:screenOrientation="portrait"></activity>
-        <activity android:name=".PembeliaanBahan" android:screenOrientation="portrait"></activity>
-        <activity android:name=".DetailPembelianBahan" android:screenOrientation="portrait"></activity>
-        <activity android:name=".HasilProduksi" android:screenOrientation="portrait"></activity>
-        <activity android:name=".InfoKetersediaanBahan" android:screenOrientation="portrait"></activity>
-        <activity android:name=".PenggunaanBahanBaku" android:screenOrientation="portrait"></activity>
-        <activity android:name=".DetailPenggunaanBahanBaku" android:screenOrientation="portrait"></activity>
-        <activity android:name=".TestUploadImage" android:screenOrientation="portrait"></activity>
-        <activity android:name=".InfoSPK" android:screenOrientation="portrait"></activity>
+        <activity android:name="ajk.riset.ajk_riset.slider.InfoPemesananProduk" android:screenOrientation="portrait"></activity>
+        <activity android:name="ajk.riset.ajk_riset.slider.DetailPesananProduk" android:screenOrientation="portrait"></activity>
+        <activity android:name="ajk.riset.ajk_riset.slider.DetailHasilProduksi" android:screenOrientation="portrait"></activity>
+        <activity android:name="ajk.riset.ajk_riset.slider.InfoDataPenyelesaian" android:screenOrientation="portrait"></activity>
+        <activity android:name="ajk.riset.ajk_riset.slider.MasterPengguna" android:screenOrientation="portrait"></activity>
+        <activity android:name="ajk.riset.ajk_riset.slider.InputPengguna" android:screenOrientation="portrait"></activity>
+        <activity android:name="ajk.riset.ajk_riset.slider.MasterProduk" android:screenOrientation="portrait"></activity>
+        <activity android:name="ajk.riset.ajk_riset.slider.InputPesanan" android:screenOrientation="portrait"></activity>
+        <activity android:name="ajk.riset.ajk_riset.slider.SuratPerintahKerja" android:screenOrientation="portrait"></activity>
+        <activity android:name="ajk.riset.ajk_riset.slider.DetailInfoPenyelesaian" android:screenOrientation="portrait"></activity>
+        <activity android:name="ajk.riset.ajk_riset.slider.DetailProduk" android:screenOrientation="portrait"></activity>
+        <activity android:name="ajk.riset.ajk_riset.slider.PembeliaanBahan" android:screenOrientation="portrait"></activity>
+        <activity android:name="ajk.riset.ajk_riset.slider.DetailPembelianBahan" android:screenOrientation="portrait"></activity>
+        <activity android:name="ajk.riset.ajk_riset.slider.HasilProduksi" android:screenOrientation="portrait"></activity>
+        <activity android:name="ajk.riset.ajk_riset.slider.InfoKetersediaanBahan" android:screenOrientation="portrait"></activity>
+        <activity android:name="ajk.riset.ajk_riset.slider.PenggunaanBahanBaku" android:screenOrientation="portrait"></activity>
+        <activity android:name="ajk.riset.ajk_riset.slider.DetailPenggunaanBahanBaku" android:screenOrientation="portrait"></activity>
+        <activity android:name="ajk.riset.ajk_riset.slider.TestUploadImage" android:screenOrientation="portrait"></activity>
+        <activity android:name="ajk.riset.ajk_riset.slider.InfoSPK" android:screenOrientation="portrait"></activity>
     </application>
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
